fix: use gap and flex-grow

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -23,5 +23,6 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin-top: 3%;
+	gap: 1em;
+	margin-top: 1em;
 }
