--- a/css/components/hotel-card.css
+++ b/css/components/hotel-card.css
@@ -14,8 +14,8 @@
 }
 
 .hotel-card .thumbnail {
-	width: 250px;
-	height: 100%;
+	width: 100%;
+	height: 10vw;
 	object-fit: cover;
 	border-start-end-radius: 15px;
 	border-start-start-radius: 15px;
